# Kei-Lang-CPP-Compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  code.kei
src/: arena.hpp  generation.hpp  main.cpp  parser.cpp  parser.hpp  tokenization.hpp
src/Components/generator/: generatorCode.cpp  generatorCode.hpp
src/Components/lexing/: lexicalAnalizer.cpp  lexicalAnalizer.hpp  lexicalAnalyzer.cpp  lexicalAnalyzer.hpp
src/Components/memory/: memoryAllocator.hpp
src/Components/syntax/: syntaxAnalizer.cpp  syntaxAnalizer.hpp  syntaxAnalyzer.cpp  syntaxAnalyzer.hpp
